fix(docs): fix broken links

--- a/docs/content/developer/iota-101/create-coin/create-coin.mdx
+++ b/docs/content/developer/iota-101/create-coin/create-coin.mdx
@@ -63,7 +63,7 @@ Amount: <COIN-AMOUNT>
 
 ## DenyList
 
-See [`DenyList`](../create-coin/regulated.mdx#deny-list).
+See [`DenyList`](./regulated.mdx#denylist).
 
 ## Create regulated coin
 
