--- a/docs/content/developer/iota-101/using-events.mdx
+++ b/docs/content/developer/iota-101/using-events.mdx
@@ -131,7 +131,7 @@ This example leverages the IOTA TypeScript SDK to subscribe to events the packag
 
 <AlphaNet />
 
-See [Rust SDK](../../references/rust-sdk.mdx#rust-sdk).
+See [Rust SDK](../../references/rust-sdk.mdx).
 
 ```rust
 use futures::StreamExt;
@@ -157,7 +157,7 @@ async fn main() -> Result<()> {
 
 ### TypeScript
 
-To create the event subscription, you can use a basic Node.js app. You need the [IOTA TypeScript SDK](../../references/ts-sdk/typescript/index.mdx#iota-typescript-sdk), so install the module using `npm install @iota/iota-sdk` at the root of your project. In your TypeScript code, import `JsonRpcProvider` and a connection from the library.
+To create the event subscription, you can use a basic Node.js app. You need the [IOTA TypeScript SDK](../../references/ts-sdk/typescript/index.mdx), so install the module using `npm install @iota/iota-sdk` at the root of your project. In your TypeScript code, import `JsonRpcProvider` and a connection from the library.
 
 ```ts
 import { JsonRpcProvider, testnetConnection } from '@iota/iota-sdk';
