--- a/docs/content/developer/iota-identity/how-tos/verifiable-credentials/create.mdx
+++ b/docs/content/developer/iota-identity/how-tos/verifiable-credentials/create.mdx
@@ -70,7 +70,7 @@ and for enforcing [subject-holder relationships](https://www.w3.org/TR/vc-data-m
 
 ## Example
 
-The following code showcases how an issuer can [create, sign](#create-and-sign-vc),
+The following code showcases how an issuer can [create, sign](#create-and-sign-a-vc),
 and [validate](#validate-a-vc) a verifiable credential.
 In this example, the issuer signs a `UniversityDegreeCredential` with Alice's name and DID.
 
