feat(devx): change tabs groupId from code-language to language

--- a/docs/content/developer/iota-101/objects/transfers/transfer-to-object.mdx
+++ b/docs/content/developer/iota-101/objects/transfers/transfer-to-object.mdx
@@ -122,7 +122,7 @@ Just like with custom transfer policies, you can use and couple these restrictio
 
 When creating transactions, you interact with `Receiving` transaction inputs almost exactly as you would with other object arguments in the IOTA TypeScript SDK. For example, if in the [Simple Account](#simple-account) example that follows you want to send a transaction that receives a coin object with ID `0xc0ffee` that was sent to your account at `0xcafe`, you can do the following using either the IOTA TypeScript SDK or IOTA Rust SDK:
 
-<Tabs groupId="code-language">
+<Tabs groupId="language">
 
 <TabItem label="TypeScript" value="typescript">
 
