--- a/docs/content/developer/iota-101/transactions/sign-and-send-txn.mdx
+++ b/docs/content/developer/iota-101/transactions/sign-and-send-txn.mdx
@@ -36,7 +36,7 @@ If you want to use a specific gas coin, first find the gas coin object ID to be 
 
 The following examples demonstrate how to sign and execute transactions using Rust, TypeScript, or the IOTA CLI.
 
-<Tabs groupId="code-language">
+<Tabs groupId="language">
 
 <TabItem value="typescript"  label="TypeScript">
 
