--- a/docs/content/developer/stardust/claiming/self-sponsor.mdx
+++ b/docs/content/developer/stardust/claiming/self-sponsor.mdx
@@ -39,7 +39,7 @@ Coming soon
 
 ### 2. Create the PTB for Claiming
 
-Next, create a P [Programmable Transaction Block (PTB)](../../iota-101/transactions/ptb/building-ptb.mdx)
+Next, create a [Programmable Transaction Block (PTB)](../../iota-101/transactions/ptb/building-ptb.mdx)
 to claim a `BasicOutput` owned by the derived Shimmer address.
 This process is similar to the one outlined in the [Basic Output](basic.mdx) guide.
 
