--- a/docs/content/developer/iota-101/objects/dynamic-fields/tables-bags.mdx
+++ b/docs/content/developer/iota-101/objects/dynamic-fields/tables-bags.mdx
@@ -1,15 +1,19 @@
 ---
 title: Table and Bag
-description: IOTA provides `Table` and `Bag` collections built using dynamic fields, but with additional support to count the number of entries they contain to protect against accidental deletion when non-empty.
+description: IOTA provides `Table` and `Bag` collections built using dynamic fields, offering additional support to count entries and prevent accidental deletion when non-empty.
 ---
 
-You can extend existing objects using [dynamic fields](dynamic-fields.mdx). Note that it's possible to delete an object that still has (potentially non-drop) dynamic fields. This might not be a concern when adding a small number of statically known additional fields to an object, but is particularly undesirable for on-chain collection types that could be holding unboundedly many key-value pairs as dynamic fields.
+[Dynamic fields](dynamic-fields.mdx) in IOTA allow developers to extend existing objects by adding or removing fields on-the-fly.
+However, deleting an object that still has dynamic fields, especially non-drop fields, can lead to issues, particularly with on-chain collections holding numerous key-value pairs. 
+To mitigate this, IOTA offers specialized collections—
+[`Table`](../../../../references/framework/iota-framework/table.mdx) and 
+[`Bag`](../../../../references/framework/iota-framework/bag.mdx)—built on dynamic fields but equipped with mechanisms to count entries and prevent accidental deletion when non-empty.
 
-This topic describes two such collections -- Table and Bag -- built using dynamic fields, but with additional support to count the number of entries they contain, and protect against accidental deletion when non-empty.
+IOTA also offers [`ObjectTable`](../../../../references/framework/iota-framework/object_table.mdx)
+and [`ObjectBag`](../../../../references/framework/iota-framework/object_bag.mdx) for scenarios
+requiring visibility of stored objects, accessible via their ID in external storage.
 
-The types and function discussed in this section are built into the IOTA framework in modules [`table`](https://github.com/iotaledger/iota/tree/develop/crates/iota-framework/packages/iota-framework/sources/table.move) and [`bag`](https://github.com/iotaledger/iota/tree/develop/crates/iota-framework/packages/iota-framework/sources/bag.move). As with dynamic fields, there is also an `object_` variant of both: `ObjectTable` in [`object_table`](https://github.com/iotaledger/iota/tree/develop/crates/iota-framework/packages/iota-framework/sources/object_table.move) and `ObjectBag` in [`object_bag`](https://github.com/iotaledger/iota/tree/develop/crates/iota-framework/packages/iota-framework/sources/object_bag.move). The relationship between `Table` and `ObjectTable`, and `Bag` and `ObjectBag` are the same as between a field and an object field: The former can hold any `store` type as a value, but objects stored as values are hidden when viewed from external storage. The latter can only store objects as values, but keeps those objects visible at their ID in external storage.
-
-### Tables
+## Tables
 
 ```move
 module iota::table {
@@ -23,11 +27,20 @@ public fun new<K: copy + drop + store, V: store>(
 }
 ```
 
-`Table<K, V>` is a *homogeneous* map, meaning that all its keys have the same type as each other (`K`), and all its values have the same type as each other as well (`V`). It is created with `iota::table::new`, which requires access to a `&mut TxContext` because `Table`s are objects themselves, which can be transferred, shared, wrapped, or unwrapped, just like any other object.
+A [`Table<K, V>`](../../../../references/framework/iota-framework/table.mdx) is a homogeneous map where all keys
+(`K`) and values (`V`) share the same type. 
+These tables are created using [`iota::table::new`](../../../../references/framework/iota-framework/table.mdx#function-new),
+which requires a mutable transaction context (`&mut TxContext`).
+Because `Table` itself is an object, it can be transferred, shared, or wrapped like any other object.
 
-See `iota::object_table::ObjectTable` for the object-preserving version of `Table`.
+:::tip `ObjectTable`
 
-### Bags
+For a version of `Table` that preserves object visibility,
+see [`iota::object_table::ObjectTable`](../../../../references/framework/iota-framework/object_table.mdx#resource-objecttable).
+
+:::
+
+## Bags
 
 ```move
 module iota::bag {
@@ -39,17 +52,23 @@ public fun new(ctx: &mut TxContext): Bag;
 }
 ```
 
-`Bag` is a *heterogeneous* map, so it can hold key-value pairs of arbitrary types (they don't need to match each other). Note that the `Bag` type does not have any type parameters for this reason. Like `Table`, `Bag` is also an object, so creating one with `iota::bag::new` requires supplying a `&mut TxContext` to generate an ID.
+Unlike `Table`, [`Bag`](../../../../references/framework/iota-framework/bag.mdx) is a heterogeneous map capable of holding key-value pairs of different types.
+Because of this flexibility, `Bag` does not use type parameters. As with `Table`, creating a `Bag` requires a mutable transaction context (`&mut TxContext`) to generate an ID.
 
-See `iota::bag::ObjectBag` for the object-preserving version of `Bag`.
+:::tip Object Bag
+
+For an object-preserving version of `Bag`,
+see [`iota::object_bag::ObjectBag`](../../../../references/framework/iota-framework/object_bag.mdx#resource-objectbag).
+
+:::
 
 ---
 
-The following sections explain the collection APIs. They use `iota::table` as the basis for code examples, with explanations where other modules differ.
+The following sections detail how to interact with these collections, using `iota::table` for examples, with notes on differences in other modules.
 
-### Interacting with collections
+## Using Collections
 
-All collection types come with the following functions, defined in their respective modules:
+All collection types offer the following core functions, defined in their respective modules:
 
 ```move
 module iota::table {
@@ -78,19 +97,25 @@ public fun remove<K: copy + drop + store, V: store>(
 }
 ```
 
-These functions add, read, write, and remove entries from the collection, respectively, and all accept keys by value. `Table` has type parameters for `K` and `V` so it is not possible to call these functions with different instantiations of `K` and `V` on the same instance of `Table`, however `Bag` does not have these type parameters, and so does permit calls with different instantiations on the same instance.
+These functions enable you to add, read, modify, and remove entries in the collection.
+The `Table` type parameters (`K` and `V`) ensure that all operations on a single instance of `Table` maintain consistent key and value types.
+In contrast, `Bag`, which lacks these type parameters, allows operations with varying key and value types on the same instance.
 
-:::info
+:::warning
 
-Like with dynamic fields, it is an error to attempt to overwrite an existing key, or access or remove a non-existent key.
+As with dynamic fields, attempting to overwrite an existing key,
+or access or remove a non-existent key, results in an error.
 
 :::
 
-The extra flexibility of `Bag`'s heterogeneity means the type system doesn't statically prevent attempts to add a value with one type, and then borrow or remove it at another type. This pattern fails at runtime, similar to the behavior for dynamic fields.
+While `Bag` offers flexibility by permitting different key-value pair types,
+this flexibility means the type system doesn't prevent adding a value with one type
+and then attempting to retrieve it with another type.
+Such mismatches will result in runtime errors.
 
-### Querying length
+### Querying Length
 
-It is possible to query all collection types for their length and check whether they are empty using the following family of functions:
+You can query the length of any collection and check if it is empty using the following functions:
 
 ```move
 module iota::table {
@@ -106,11 +131,11 @@ public fun is_empty<K: copy + drop + store, V: store>(
 }
 ```
 
-`Bag` has these functions, but they are not generic on `K` and `V` because `Bag` does not have these type parameters.
+While `Bag` supports these functions, they are not generic like in `Table` since `Bag` doesn't use type parameters.
 
-### Querying for containment
+### Querying for Containment
 
-Tables can be queried for key containment with:
+You can check if a key exists in a table with the following function:
 
 ```move
 module iota::table {
@@ -123,7 +148,7 @@ public fun contains<K: copy + drop + store, V: store>(
 }
 ```
 
-The equivalent functions for `Bag` are:
+For `Bag`, the equivalent functions are:
 
 ```move
 module iota::bag {
@@ -138,11 +163,13 @@ public fun contains_with_type<K: copy + drop + store, V: store>(
 }
 ```
 
-The first function tests whether `bag` contains a key-value pair with key `k: K`, and the second function additionally tests whether its value has type `V`.
+The first function checks if the `bag` contains a key-value pair with the key `k: K`,
+while the second additionally verifies that the value associated with the key has the specified type `V`.
 
 ### Clean-up
 
-Collection types protect against accidental deletion when they might not be empty. This protection comes from the fact that they do not have `drop`, so must be explicitly deleted, using this API:
+To prevent accidental deletion when non-empty, collection types like `Table` and `Bag` do not have the `drop` ability.
+Instead, they must be explicitly deleted using the following API:
 
 ```move
 module iota::table {
@@ -154,7 +181,9 @@ public fun destroy_empty<K: copy + drop + store, V: store>(
 }
 ```
 
-This function takes the collection by value. If it contains no entries, it is deleted, otherwise the call fails. `iota::table::Table` also has a convenience function:
+This function deletes the collection only if it is empty.
+If the collection contains entries, the deletion fails.
+For convenience, `iota::table::Table` also provides:
 
 ```move
 module iota::table {
@@ -166,17 +195,20 @@ public fun drop<K: copy + drop + store, V: drop + store>(
 }
 ```
 
-You can call the convenience function only for tables where the value type also has `drop` ability, which allows it to delete tables whether they are empty or not.
 
-Note that `drop` is not called implicitly on eligible tables before they go out of scope. It must be called explicitly, but it is guaranteed to succeed at runtime.
+This function can delete a table regardless of its state but only if the value type (`V`) has the `drop` ability.
+Unlike other languages, Move requires you to call `drop` explicitly—it does not occur automatically when a table goes out of scope.
 
-`Bag` and `ObjectBag` cannot support `drop` because they could be holding a variety of types, some of which may have `drop` and some which may not.
+`Bag` and `ObjectBag` do not support `drop` due to their potential to hold various types,
+some of which might not have the `drop` ability.
 
-`ObjectTable` does not support `drop` because its values must be objects, which cannot be dropped (because they must contain an `id: UID` field and `UID` does not have `drop`).
+Similarly, `ObjectTable` does not support `drop` because its values are objects,
+which cannot be dropped as they must contain a `UID` field, and `UID` lacks the `drop` ability.
 
 ### Equality
 
-Equality on collections is based on identity, for example, an instance of a collection type is only considered equal to itself and not to all collections that hold the same entries:
+Collection equality in Move is based on identity, not content.
+This means that a collection instance is only equal to itself, even if another collection holds identical entries:
 
 ```move
 let t1 = iota::table::new<u64, u64>(ctx);
@@ -186,4 +218,4 @@ assert!(&t1 == &t1, 0);
 assert!(&t1 != &t2, 1);
 ```
 
-This is unlikely to be the definition of equality that you want.
+This identity-based equality is unlikely to be the behavior you want for comparing collections.
