--- a/docs/content/developer/iota-101/objects/object-ownership/immutable.mdx
+++ b/docs/content/developer/iota-101/objects/object-ownership/immutable.mdx
@@ -1,20 +1,31 @@
 ---
 title: Immutable Objects
+description: Immutable objects on IOTA cannot be mutated, transferred, or deleted once frozen. These objects are ownerless and can be used by anyone on the network.
 ---
 
-Objects in IOTA can have different types of ownership, with two broad categories: immutable objects and mutable objects. An immutable object is an object that can't be mutated, transferred, or deleted. Immutable objects have no owner, so anyone can use them.
+In IOTA, objects can be either mutable or immutable.
+Immutable objects are unique in that they cannot be altered, transferred, or deleted after they are created.
+Once an object is made immutable, it has no owner, making it accessible to anyone on the network.
 
-## Create immutable object
+## Creating an Immutable Object
 
-To convert an object into an immutable object, call the `public_freeze_object` function from the [transfer module](https://github.com/iotaledger/iota/blob/develop/crates/iota-framework/packages/iota-framework/sources/transfer.move):
+### Using `public_freeze_object`
+
+To make an object immutable,
+use the [`transfer::public_freeze_object`](../../../../references/framework/iota-framework/transfer.mdx#function-public_freeze_object) function:
 
 ```move
 public native fun public_freeze_object<T: key>(obj: T);
 ```
 
-This call makes the specified object immutable. This is a non-reversible operation. You should freeze an object only when you are certain that you don't need to mutate it.
+This function irreversibly freezes the specified object, rendering it immutable.
+Once frozen, the object can no longer be mutated.
+You should only freeze an object when you are sure it no longer requires any modifications.
 
-You can see this function's use in one of the [color_object example module](https://github.com/iotaledger/iota/blob/main/examples/move/color_object/sources/example.move) tests. The test creates a new (owned) `ColorObject`, then calls `public_freeze_object` to turn it into an immutable object.
+For example,
+the [color_object example module](https://github.com/iotaledger/iota/blob/main/examples/move/color_object/sources/example.move) includes a test
+that creates a new `ColorObject`,
+then calls `public_freeze_object` to make it immutable:
 
 ```move
 {
@@ -26,11 +37,17 @@ You can see this function's use in one of the [color_object example module](http
 };
 ```
 
-In the preceding test, you must already own a `ColorObject` to pass it in. At the end of this call, this object is frozen and can never be mutated. It is also no longer owned by anyone.
+In this test, you must own the `ColorObject` to freeze it.
+Once frozen, the object is no longer owned by anyone and can never be altered.
 
-The `transfer::public_freeze_object` function requires that you pass the object by value. If you are allowed to pass the object by a mutable reference, you could still mutate the object after the `public_freeze_object` call. This contradicts the fact that it should have become immutable.
+### Using `public_freeze_object`
 
-Alternatively, you can also provide an API that creates an immutable object at creation:
+The [`public_freeze_object`](../../../../references/framework/iota-framework/transfer.mdx#function-public_freeze_object) function requires the object
+to be passed by value.
+This ensures that after the function is called, no one can mutate the object,
+which would contradict its immutable status.
+
+Alternatively, you can create an immutable object directly upon its creation using the [`transfer::public_freeze_object`](../../../../references/framework/iota-framework/transfer.mdx#function-public_freeze_object) function:
 
 ```move
 public fun create_immutable(red: u8, green: u8, blue: u8, ctx: &mut TxContext) {
@@ -39,31 +56,36 @@ public fun create_immutable(red: u8, green: u8, blue: u8, ctx: &mut TxContext) {
 }
 ```
 
-This function creates a new `ColorObject` and immediately makes it immutable before it has an owner.
+This function creates a `ColorObject` and immediately makes it immutable before it is owned by anyone.
 
-## Use immutable object
+## Using Immutable Objects
 
-After an object becomes immutable, the rules of who can use this object in IOTA Move calls change:
-You can only pass an immutable object as a read-only, immutable reference to IOTA Move entry functions as `&T`.
+Once an object is made immutable, anyone can use it in IOTA Move calls, but only as a read-only reference (`&T`).
+Because immutable objects cannot be mutated, they do not pose any risk of data races,
+even if multiple transactions use the same immutable object simultaneously.
+This characteristic means that immutable objects do not require sequencing through consensus,
+further simplifying their use in transactions.
 
-Anyone can use immutable objects.
-
-Consider a function that copies the value of one object to another:
+For example, consider a function that copies the value from one object to another:
 
 ```move
 public fun copy_into(from: &ColorObject, into: &mut ColorObject);
 ```
 
-In this function, anyone can pass an immutable object as the first argument, `from`, but not the second argument.
-Because you can never mutate immutable objects, there's no data race, even when multiple transactions are using the same immutable object at the same time. Hence, the existence of immutable objects does not pose any requirement on consensus.
+In this function, anyone can pass an immutable object as the `from` argument,
+but not as the `into` argument because `into` requires a mutable reference.
 
-## Test immutable object
+## Testing Immutable Objects
 
-You can interact with immutable objects in unit tests using `test_scenario::take_immutable<T>` to take an immutable object wrapper from global storage, and `test_scenario::return_immutable` to return the wrapper back to the global storage.
+In unit tests,
+you can interact with immutable objects using `test_scenario::take_immutable<T>` to retrieve an immutable object from global storage,
+and `test_scenario::return_immutable` to return it.
 
-The `test_scenario::take_immutable<T>` function is required because you can access immutable objects solely through read-only references. The `test_scenario` runtime keeps track of the usage of this immutable object. If the compiler does not return the object via `test_scenario::return_immutable` before the start of the next transaction, the test stops.
+The `test_scenario::take_immutable<T>` function is necessary because immutable objects can only be accessed through read-only references.
+The `test_scenario` runtime tracks the usage of this immutable object,
+and if the object is not returned before the next transaction begins, the test will halt.
 
-To see it work in action:
+Here’s how it works in a test:
 
 ```move
 let sender1 = @0x1;
@@ -80,9 +102,9 @@ test_scenario::next_tx(scenario, sender1);
 };
 ```
 
-This test submits a transaction as `sender1`, which tries to create an immutable object.
-
-The `has_most_recent_for_sender<ColorObject>` function no longer returns `true`, because the object is no longer owned. To take this object:
+In this test,
+the `has_most_recent_for_sender<ColorObject>` function does not return `true` because the object is no longer owned.
+To access this object:
 
 ```move
 // Any sender can work.
@@ -96,9 +118,10 @@ test_scenario::next_tx(scenario, sender2);
 };
 ```
 
-To show that this object is indeed not owned by anyone, start the next transaction with `sender2`. Note that it used `take_immutable` and succeeded. This means that any sender can take an immutable object. To return the object, call the `return_immutable` function.
+This test demonstrates that any sender can access an immutable object using `take_immutable`.
+The object is then returned to global storage with `return_immutable`.
 
-To examine whether this object is immutable, add a function that tries to mutate a `ColorObject`:
+To verify that the object is truly immutable, you can attempt to modify it:
 
 ```move
 public fun update(
@@ -111,11 +134,13 @@ public fun update(
 }
 ```
 
-As you have learned, the function fails when the `ColorObject` is immutable.
+This function will fail if the `ColorObject` is immutable, confirming its status.
 
-## On-chain interactions
+## On-Chain Interaction Example
 
-First, view the objects you own:
+### Viewing Owned Objects
+
+First, identify the objects you own. Run the following commands to set your active address and view the objects associated with it:
 
 ```shell
 export ADDR=`iota client active-address`
@@ -123,52 +148,73 @@ export ADDR=`iota client active-address`
 iota client objects $ADDR
 ```
 
-Publish the `ColorObject` code on-chain using the IOTA Client CLI:
+### Publishing the `ColorObject` Code
+
+To interact with objects, you need to publish the `ColorObject` code on-chain.
+Use the following command, replacing `<GAS-AMOUNT>` with your gas budget:
 
 ```shell
 iota client publish $ROOT/examples/move/color_object --gas-budget <GAS-AMOUNT>
 ```
 
-Set the package object ID to the `$PACKAGE` environment variable, if you have it set. Then create a new `ColorObject`:
+### Creating a New `ColorObject`
+
+Set the package object ID to the `$PACKAGE` environment variable.
+Then, create a new `ColorObject` by executing the following command:
 
 ```shell
 iota client call --gas-budget <GAS-AMOUNT> --package $PACKAGE --module "color_object" --function "create" --args 0 255 0
 ```
 
-Set the newly created object ID to `$OBJECT`. To view the objects in the current active address:
+After creation, set the newly created object ID to `$OBJECT`.
+
+### Viewing Objects in the Current Active Address
+
+To confirm the creation of your `ColorObject`, list the objects in the current active address:
 
 ```shell
 iota client objects $ADDR
 ```
 
-You should see an object with the ID you used for `$OBJECT`. To turn it into an immutable object:
+You should see an object with the ID stored in `$OBJECT`.
+
+### Freezing an Object
+
+To make the object immutable, use the following command:
 
 ```shell
 iota client call --gas-budget <GAS-AMOUNT> --package $PACKAGE --module "color_object" --function "freeze_object" --args \"$OBJECT\"
 ```
 
-View the list of objects again:
+### Verifying Object Immutability
+
+After freezing the object, it will no longer appear in your owned objects list.
+Verify this by listing your objects again:
 
 ```shell
 iota client objects $ADDR
 ```
 
-`$OBJECT` is no longer listed. It's no longer owned by anyone. You can see that it's now immutable by querying the object information:
+The object ID `$OBJECT` should no longer be listed.
+To confirm its immutability, query the object information:
 
 ```shell
 iota client object $OBJECT
 ```
 
-The response includes:
+The response should include:
 
 ```shell
 Owner: Immutable
 ```
 
-If you try to mutate it:
+### Attempting to Mutate an Immutable Object
+
+Finally, if you attempt to modify the immutable object, the CLI will prevent the mutation.
+Use the following command as an example:
 
 ```shell
 iota client call --gas-budget <GAS-AMOUNT> --package $PACKAGE --module "color_object" --function "update" --args \"$OBJECT\" 0 0 0
 ```
 
-The response indicates that you can't pass an immutable object to a mutable argument.
+The response will indicate that you cannot pass an immutable object to a mutable argument.
