--- a/docs/content/developer/iota-101/objects/object-ownership/object-ownership.mdx
+++ b/docs/content/developer/iota-101/objects/object-ownership/object-ownership.mdx
@@ -1,35 +1,38 @@
 ---
 title: Object Ownership
+description: Overview of the different types of object ownership in IOTA and their implications for transactions and access.
 ---
 
-Every object has an owner field that dictates how you can use it in transactions. Objects can have the following types of ownership:
+Every object on the IOTA network has an ownership model that dictates how it can be accessed and used within transactions. 
+The ownership type of an object determines who has the authority to interact with it and how it can be manipulated. Below are the various types of object ownership in IOTA:
 
-## Address-owned
+## Address-Owned Objects
 
-An address-owned object is owned by a specific 32-byte address that is either an account address (derived from a particular signature scheme) or an object ID. An address-owned object is accessible only to its owner and no others. 
+An [address-owned](address-owned.mdx) object is tied to a specific 32-byte address,
+which can either be an account address derived from a particular signature scheme or an object ID. 
+These objects are exclusively accessible by their owner,
+meaning no other entity can interact with them unless ownership is transferred.
 
-Go to [Address-Owned Objects](address-owned.mdx).
+## Dynamic Fields
 
-## Dynamic fields
+[Dynamic fields](../dynamic-fields/dynamic-fields.mdx) in IOTA allow you to add and remove fields dynamically,
+meaning their structure isn't fixed at the time of publication.
+These fields only impact gas when they are accessed and can store a wide variety of heterogeneous values, making them versatile for many use cases.
 
-Dynamic fields and dynamic object fields on IOTA are added and removed dynamically, affect gas only when accessed, and store heterogeneous values.
+## Immutable Objects
 
-Go to [Dynamic (Object) Fields](../dynamic-fields/dynamic-fields.mdx).
+[Immutable objects](immutable.mdx) are unique in that once they are set as immutable, they cannot be altered, transferred, or deleted.
+These objects have no owner, making them accessible to anyone on the network.
+Immutable objects are especially useful when you need to ensure that the data remains unchanged.
 
-## Immutable
+## Shared Objects
 
-An immutable object is an object that can't be mutated, transferred, or deleted. Immutable objects have no owner, so anyone can use them.
+[Shared objects](shared.mdx) are made accessible to everyone on the network through the
+[`0x2::transfer::share_object`](../../../../references/framework/iota-framework/transfer.mdx#function-share_object) function.
+Unlike address-owned objects, shared objects are not restricted to a single owner and can be read or modified by any entity on the network.
 
-Go to [Immutable Objects](immutable.mdx).
+## Wrapped Objects
 
-## Shared
+In Move, objects can be organized in a hierarchical manner by [wrapping](wrapped.mdx) one `struct` type as a field within another.
+This allows for more complex data structures and the ability to encapsulate different functionalities within a single object.
 
-A shared object is an object that is shared using the `0x2::transfer::share_object` function and is accessible to everyone. Unlike owned objects, anyone can access shared ones on the network.
-
-Go to [Shared Objects](shared.mdx).
-
-## Wrapped
-
-In Move, you can organize data structures by putting a field of `struct` type in another.
-
-Go to [Wrapped Objects](wrapped.mdx).
